Add include_presences option on GetDocuments API
