# api/types/document_summary.go
@@ -3,6 +3,7 @@ package types
 import (
 	"time"
 
+	"github.com/yorkie-team/yorkie/pkg/document/innerpresence"
 	"github.com/yorkie-team/yorkie/pkg/document/key"
 	"github.com/yorkie-team/yorkie/pkg/resource"
 )
@@ -35,4 +36,7 @@ type DocumentSummary struct {
 
 	// SchemaKey is the key of the schema of the document.
 	SchemaKey string
+
+	// Presences is the presence information of all clients.
+	Presences map[string]innerpresence.Presence
 }
